# torus

./: .gitignore  CMakeLists.txt  LICENSE-cmake-modules.txt  LICENSE-freeglut.txt  Makefile  README.md  build-mingw.bat  build-mingw.sh  build.bat  build.sh  clean.sh  run-mingw.sh  run.bat  run.sh  torus.c
.github/workflows/: c.yml
cmake/toolchains/: windows-cross-compile-x86_64-w64-mingw32.cmake
src/: torus.c
